src/test/deca/context/invalid/provided/class13.deca
class A{
    int a;
    float b;

    void setA(int a){
        return a;
    }
}